Fixed some spacing issues

--- a/styles.css
+++ b/styles.css
@@ -9,18 +9,19 @@ body {
   position: relative;
 }
 body h1, body p {
-  text-align: center;
+  padding-left: 7.5%;
+  max-width: 650px;
 }
 .grid{
   min-height: 100vh;
   display: grid;
-  gap: 30px;
-  grid-template-areas: "header header header"
-                        "nav main aside"
-                        "footer footer footer";
+  row-gap: 30px;
+  grid-template-areas: "header header nav nav"
+                        "main main main aside"
+                        "footer footer footer footer";
 
   grid-template-rows: 1fr 4fr 1fr;
-  grid-template-columns: 1fr 3fr 1fr;
+  grid-template-columns: 1fr 3fr 1 fr 1fr;
 }
 .greyedout {
   filter: grayscale(1);
@@ -33,6 +34,20 @@ header {
 }
 nav {
   grid-area: nav;
+  background-color: antiquewhite;
+  display: flex;
+  justify-content: space-around;
+  padding-left: 15vh;
+
+}
+ul {
+  display: flex;
+  column-gap: 50px;
+  list-style: none;
+  margin-top: 50px;
+}
+li {
+  flex-flow: row nowrap;
 }
 main {
   grid-area: main;
@@ -45,6 +60,7 @@ aside {
 }
 footer {
   display: flex;
+  flex: 1 1 100%;
   grid-area: footer;
   margin: 4vh 0 0 0;
   justify-content: center;
@@ -68,7 +84,8 @@ footer {
   border: solid rgb(215, 202, 205);
   box-shadow: 3px 3px 3px rgb(207, 195, 195);
   height: 150px;
-  width: 350px;
+  min-width: 200px;
+  max-width: 350px;
   grid-template-columns: 73% 27%;
   grid-template-rows: 90% 10%;
   padding-left: 10px;
@@ -88,6 +105,7 @@ button {
 button.remove {
   width: 80px;
   height: 40px;
+  margin-left: -15px;
   align-self: flex-end;
   background-color: rgb(184, 142, 163);
 }
